--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,98 @@
+html,
 body {
-  background-color: beige;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  color: aliceblue;
+  background-color: #202b3d;
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 615px;
 }
 .hidden {
   display: none;
 }
+.stopwatch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #44576c;
+  width: 400px;
+  height: 300px;
+  border-radius: 6px;
+  font-size: 40px;
+}
+#stopwatch_time {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+#clock {
+  font-size: 80px;
+  margin: 5px;
+}
+#input_message {
+  margin: 5px;
+  font-size: 40px;
+}
+#inputName {
+  width: 90%;
+  margin: 5px;
+  background: transparent;
+  color: aliceblue;
+  height: 40px;
+  font-size: 36px;
+  border: none;
+}
+#todo_input {
+  width: 90%;
+  border: none;
+  background: transparent;
+  color: aliceblue;
+  font-size: 20px;
+  height: 30px;
+  margin-left: 5px;
+}
+#inputName:focus,
+#todo_input:focus {
+  outline: none;
+}
+#greeting {
+  margin: 8px;
+  font-size: 40px;
+}
+#todo_list {
+  list-style: none;
+  padding: 0px;
+  margin: 3px;
+}
+#todo_list li {
+  width: 100%;
+  background-color: #e8863f;
+  font-size: 23px;
+  border-radius: 5px;
+  margin-top: 4px;
+}
+.todo_container {
+  padding: 5px;
+  position: absolute;
+  background-color: #263747;
+  height: 500px;
+  width: 270px;
+  border-radius: 6px;
+  right: 5px;
+}
+
+/*#bgImage {
+  z-index: -1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0px;
+}*/
