--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,53 @@ body {
 .hidden {
   display: none;
 }
-.stopwatch {
+#weather {
+  position: absolute;
+  top: 20px;
+  font-size: 25px;
+}
+#stopwatch {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  z-index: 9;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #44576c;
-  width: 400px;
-  height: 300px;
+  width: 300px;
+  height: 220px;
   border-radius: 6px;
   font-size: 40px;
+}
+#stopwatch_start,
+#stopwatch_stop,
+#stopwatch_initial,
+#delete_btn {
+  cursor: pointer;
+  width: 90px;
+  height: 25px;
+  border: none;
+  color: aliceblue;
+  border-radius: 4px;
+}
+#stopwatch_start {
+  background-color: #339af0;
+}
+#stopwatch_stop,
+#delete_btn {
+  background-color: #cc0000;
+}
+#stopwatch_initial {
+  color: #202b3d;
+}
+#stopwatch_dragbox {
+  cursor: move;
+  z-index: 10;
+  width: 100%;
+  height: 20px;
+  background-color: #161848;
+  border-radius: 6px 6px 0px 0px;
 }
 #stopwatch_time {
   margin-top: 10px;
@@ -76,14 +114,29 @@ body {
   margin: 3px;
 }
 #todo_list li {
-  width: 100%;
-  background-color: #e8863f;
-  font-size: 23px;
+  width: 96%;
+  font-size: 20px;
   border-radius: 5px;
   margin-top: 4px;
 }
+#todo_list li:hover {
+  font-size: 25px;
+}
+.todo_chcbox {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #bcbcbc;
+}
+#todo_footer {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  bottom: 0px;
+  background-color: #44576c;
+  border-radius: 0px 0px 6px 6px;
+}
 .todo_container {
-  padding: 5px;
+  padding: 0px;
   position: absolute;
   background-color: #263747;
   height: 500px;
@@ -99,3 +152,60 @@ body {
   width: 100%;
   top: 0px;
 }*/
+
+#wiseSaying {
+  position: absolute;
+  bottom: 40px;
+  font-size: 15px;
+}
+
+#linkSearchHistory {
+  position: absolute;
+  width: 300px;
+  height: 450px;
+  top: 30px;
+  left: 40px;
+}
+#hisory_title {
+  font-size: 20px;
+  margin-top: 5px;
+}
+#history_linklist {
+  margin-left: 5px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  font-size: 25px;
+}
+#history_linklist li a {
+  color: aliceblue;
+}
+#history_linklist li button {
+  background: transparent;
+  border: none;
+}
+
+#search_form {
+  margin-top: 15px;
+}
+#input_search {
+  width: 90%;
+  border-radius: 20px;
+  background-color: #ffffff;
+  height: 35px;
+  font-size: 17px;
+  box-shadow: 5px 5px 5px;
+}
+#input_search:focus {
+  outline: none;
+}
+.scrollBox::-webkit-scrollbar {
+  width: 10px;
+}
+.scrollBox::-webkit-scrollbar-thumb {
+  background-color: #2f3542;
+}
+.scrollBox::-webkit-scrollbar-track {
+  background-color: grey;
+}
